gcc/testsuite/gdc.test/runnable/test8182.d
struct S
{
    ~this()
    {
        assert(false);
    }
}

void lazily(lazy S)
{
}

void main()
{
    lazily(S());
}
