gcc/testsuite/gdc.test/fail_compilation/fail6561.d
struct S
{
    alias x this;   // should cause undefined identifier error
}

void main()
{
}
